<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SportsTracker</string>
    <string name="title_activity_bot_menu">BotMenuActivity</string>
    <string name="title_activity_newtraining">NewTrainingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Maps</string>
    <string name="title_user">User</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_welcome_activity">Welcome</string>
    <string name="title_activity_edit_user">Edit User</string>
    <string name="title_map">Map</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="start">Start</string>
    <string name="stop">stop</string>
    <string name="title">Benvenuto in Sports Tracker!</string>
    <string name="UserName">UserName</string>
    <string name="eta">Età</string>
    <string name="altezza">Altezza(cm)</string>
    <string name="peso">Peso(kg)</string>
    <string name="Password">Password</string>
    <string name="Avanti">Avanti</string>
    <string name="Login">Login</string>
    <string name="utente">Nuovo Utente</string>
    <string name="allenamenti">I tuoi Allenamenti</string>
    <string name="allenamenti_registrati">Nessun allenamento registrato</string>
    <string name="durata">Durata</string>
    <string name="data">Data Allenamento</string>
    <string name="tipo_allenamento">Tipo di allenamento</string>
    <string name="elimina">Elimina</string>
    <string name="id_allenamento">ID allenamento</string>
    <string name="cambia">Cambia</string>
    <string name="sesso">Sesso</string>
    <string name="obiettivo">Obiettivo</string>
    <string name="Peso">Peso</string>
    <string name="Altezza">Altezza</string>
    <string name="modifica_profilo">Modifica Profilo</string>
    <string name="disconnetti">Disconnetti</string>
    <string name="profile_picture_description">Immagine del profilo dell utente</string>
    <string name="eta_view">Età: %1$d</string>
    <string name="sesso_view">Sesso: %1$s</string>
    <string name="altezza_view">Altezza(cm): %1$d</string>
    <string name="peso_view">Peso(kg): %1.1f</string>
    <string name="obiettivo_view">Obiettivo: %1$s</string>
    <string name="salva_modifiche">Salva Modifiche</string>
    <string name="modifica_dati_utente">Modifica dati Utente</string>
    <string name="reset_time"> 00:00:00 </string>
    <string name="reset_calories">Calorie: 0.00</string>
    <string name="nuovo_allenamento">Nuovo Allenamento</string>
    <string name="no_calories">0 kcal</string>
    <string name="no_distance">0 m</string>
    <string name="chiudi_allenamento">Chiudi Allenamento</string>
    <string name="aggiungi_nuovo_allenamento">Aggiungi nuovo allenamento</string>
    <string name="id_allenamento_view">Id allenamento: %1d</string>
    <string name="durata_e_calorie">%1d sec - %1d kcal - %1.2f m</string>
    <string name="no_allenamenti">Nessun allenamento registrato</string>
    <string name="descrizione_caricamento_immagine">Immagine di caricamento in corso</string>
    <string name="salva_allenamento">Salva Allenamento</string>
    <string name="inserisci_data">Inserisci la data</string>
    <string name="inserisci_dettagli_allenamento">Inserisci i dettagli dell allenamento</string>
    <string name="allenamento_per_data">Allenamento del %1$s: %2$s</string>
    <string name="velocitaTextView">0 km/h</string>

    <string-array name="objectives_array" >
        <item>Dimagrire</item>
        <item>Migliorare resistenza</item>
        <item>Migliorare forma fisica</item>
    </string-array>

    <string-array name="sesso_array">
        <item>Maschio</item>
        <item>Femmina</item>
        <item>Altro</item>
    </string-array>

    <string-array name="sports_array" >
        <item>Corsa</item>
        <item>Bicicletta</item>
    </string-array>

</resources>