<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.broccolistefanipss.sportstracker.activity.WelcomeActivity">

    <TextView
        android:id="@+id/Titolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/UserName"
        android:fontFamily="@font/ubuntu_light"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titolo"
        app:layout_constraintWidth_percent="0.8"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/eta"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/eta"
        android:fontFamily="@font/ubuntu_light"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerSesso"
        app:layout_constraintWidth_percent="0.8"
        android:autofillHints=""  />

    <EditText
        android:id="@+id/altezza"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/altezza"
        android:fontFamily="@font/ubuntu_light"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eta"
        app:layout_constraintWidth_percent="0.8"
        android:autofillHints="" />

    <EditText
        android:id="@+id/peso"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/peso"
        android:fontFamily="@font/ubuntu_light"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/altezza"
        app:layout_constraintWidth_percent="0.8"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/Password"
        android:fontFamily="@font/ubuntu_light"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peso"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinnerObiettivo"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/ubuntu_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:background="@drawable/button_style"
        android:text="@string/Avanti"
        android:fontFamily="@font/ubuntu_light"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerObiettivo"
        app:layout_constraintVertical_bias="0.273" />


    <TextView
        android:id="@+id/loginButton"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/ubuntu_regular"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextButton" />

    <Spinner
        android:id="@+id/spinnerSesso"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/ubuntu_light"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />


    </androidx.constraintlayout.widget.ConstraintLayout>